# shields.py

./: README.md  setup.cfg  setup.py
shields/: __init__.py  _badge.py  abstract.py  npm.py  pypi.py
tests/shields/examples/: _abstract.py  _badge.py
tests/shields/examples/pypi/: format.py  implementation.py  license.py  pyversions.py  status.py  version.py  wheel.py
