[metadata]
name = shields
version = 2018.11.20
url = https://github.com/looking-for-a-job/shields.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = shields badges

[options]
install_requires = 
	badge
	public
	setuptools
packages = 
	shields
